fixed alignment issues for alignment and filter button on cPop
Former-commit-id: 7f0f4edf856c0fd391f229728abd7ac1535234a6

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -151,14 +151,21 @@ h6 {
   display: none;
   float: right;
   position: relative;
+  margin-top: 8px;
+  margin-right: 30px;
+  
+  .seperator {
+    width: 1px;
+    height: 30px;
+    background: @color-B3;
+    margin: 0 10px;
+  }
   
   .align_label {
     background-image: url("../images/align_onoff.png");
     background-repeat: no-repeat;
     padding-left: 30px;
-    position: absolute;
-    bottom: -23px;
-    right: 169px;
+    margin-top: 10px;
   }
   
   label {
@@ -168,10 +175,8 @@ h6 {
   
   .align_control {
     margin-left: 8px;
-    position: absolute;
-    top: 7px;
-    right: 90px;
     width: 75px;
+    margin-top: 8px;
   }
   
   .align_button {
@@ -193,18 +198,13 @@ h6 {
   }
   
   .filter_label {
-    padding-left: 15px;
-    border-left: solid 1px;
-    height: 30px;
-    line-height: 32px;
+    margin-top: 10px;
     cursor: pointer;
-    position: absolute;
-    right: 30px;
     
     span {
       position: absolute;
       margin-left: 5px;
-      top: 15px;
+      margin-top: 5px;
     }
   }
   
