--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -776,6 +776,10 @@ th.ui-th-column div {
     margin-bottom: 0;
   }
   
+  .filters {
+    width: 780px;
+  }
+  
   .selectedFilterGroup {
     float: left;
     margin-right: 10px;
